Fixed icon spacing on hero-left when you remove icons

--- a/static/css/final.css
+++ b/static/css/final.css
@@ -468,6 +468,7 @@ section {
   }
   .hero-left .icons {
     margin: 0 auto;
+    justify-content: center;
   }
 }
 
